bridge/base/app-network-network-policy.yaml
#! app-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: app-network-network-policy
    namespace: horizons-export-4ae51224-e377-439c-9315-7d2c7f7b11c2
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.app-network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.app-network: "true"
